Archive2/25/a9990a10c9469d/output
main.cpp: In function 'int main()':
main.cpp:4:25: error: 'printf' was not declared in this scope
     printf("hello world");
                         ^
